--- a/src/views/TimePopupViewPeriod.fxml
+++ b/src/views/TimePopupViewPeriod.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#keyPressed" onMouseDragged="#mouseDraggedPopup" onMousePressed="#mousePressed" prefHeight="600.0" prefWidth="700.0" style="-fx-background-color: #E6BB9A;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.TimePopupPeriodController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#keyPressed" onMouseDragged="#mouseDraggedPopup" onMousePressed="#mousePressed" prefHeight="600.0" prefWidth="700.0" style="-fx-background-color: #E6BB9A;" xmlns="http://javafx.com/javafx/8.0.241" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.TimePopupPeriodController">
    <Pane layoutX="4.0" layoutY="4.0" prefHeight="593.0" prefWidth="693.0" style="-fx-background-color: #2B2B2B;">
       <Label layoutX="79.0" layoutY="36.0" prefHeight="69.0" prefWidth="269.0" text="Add Period." textFill="WHITE">
          <font>
@@ -75,18 +75,19 @@
          </Label>
       </Pane>
       <Pane layoutX="79.0" layoutY="401.0" prefHeight="57.0" prefWidth="538.0">
-         <children>
-            <Label layoutY="-6.0" prefHeight="69.0" prefWidth="269.0" text="Start Week Number:" textFill="WHITE">
-               <font>
-                  <Font name="Arial Rounded MT Bold" size="25.0" />
-               </font>
-            </Label>
-            <TextField fx:id="startWeekNumberField" layoutX="300.0" layoutY="6.0" prefHeight="45.0" prefWidth="224.0" promptText="e.g. 12" style="-fx-border-style: solid; -fx-border-width: 3; -fx-border-radius: 10; -fx-background-color: transparent; -fx-border-color: white; -fx-text-fill: white;" text="1">
-               <font>
-                  <Font name="Arial" size="16.0" />
-               </font>
-            </TextField>
-         </children>
+         <Label layoutY="-6.0" prefHeight="69.0" prefWidth="269.0" text="Start Week Number:" textFill="WHITE">
+            <font>
+               <Font name="Arial Rounded MT Bold" size="25.0"/>
+            </font>
+         </Label>
+         <TextField fx:id="startWeekNumberField" layoutX="300.0" layoutY="6.0" prefHeight="45.0" prefWidth="224.0"
+                    promptText="e.g. 12"
+                    style="-fx-border-style: solid; -fx-border-width: 3; -fx-border-radius: 10; -fx-background-color: transparent; -fx-border-color: white; -fx-text-fill: white;"
+                    text="1">
+            <font>
+               <Font name="Arial" size="16.0"/>
+            </font>
+         </TextField>
       </Pane>
    </Pane>
 </Pane>
