--- a/src/views/RegisterPageView.fxml
+++ b/src/views/RegisterPageView.fxml
@@ -10,78 +10,91 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseDragged="#mouseDragged" onMousePressed="#mousePressed" prefHeight="900.0" prefWidth="1400.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.RegisterPageController">
-   <children>
-      <Pane prefHeight="900.0" prefWidth="701.0" style="-fx-background-color: #E6BB9A;">
-         <children>
-            <Label layoutX="127.0" layoutY="263.0" text="Organised.">
-               <font>
-                  <Font name="Arial Rounded MT Bold" size="50.0" />
-               </font>
-            </Label>
-            <Label fx:id="greetingsMessageLabel" alignment="TOP_LEFT" layoutX="127.0" layoutY="474.0" prefHeight="133.0" prefWidth="507.0" style="-fx-wrap-text: True;" text="You are literally out of the comprehension of time.">
-               <font>
-                  <Font name="Arial Rounded MT Bold" size="30.0" />
-               </font>
-            </Label>
-            <Label fx:id="greetingsLabel" layoutX="127.0" layoutY="426.0" text="Hello!">
-               <font>
-                  <Font name="Arial Rounded MT Bold" size="40.0" />
-               </font>
-            </Label>
-         </children></Pane>
-      <Pane layoutX="700.0" prefHeight="900.0" prefWidth="701.0" style="-fx-background-color: #2B2B2B;">
-         <children>
-            <ImageView fx:id="closeButton" fitHeight="29.0" fitWidth="27.0" layoutX="660.0" layoutY="14.0" onMouseClicked="#closeClicked" onMouseEntered="#closeHovered" onMouseExited="#closeExited" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../images/close_icon.png" />
-               </image>
-            </ImageView>
-            <ImageView fx:id="minimizeButton" fitHeight="27.0" fitWidth="27.0" layoutX="633.0" layoutY="14.0" onMouseClicked="#minimizeClicked" onMouseEntered="#minimizeHovered" onMouseExited="#minimizeExited" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../images/minimize_icon.png" />
-               </image>
-            </ImageView>
-            <ImageView fx:id="goBackButton" fitHeight="27.0" fitWidth="27.0" layoutX="606.0" layoutY="14.0" onMouseClicked="#goBackClicked" onMouseEntered="#goBackHovered" onMouseExited="#goBackExited" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../images/back_icon.png" />
-               </image>
-            </ImageView>
-            <Label layoutX="216.0" layoutY="264.0" text="Register." textFill="WHITE">
-               <font>
-                  <Font name="Arial Rounded MT Bold" size="50.0" />
-               </font>
-            </Label>
-            <TextField fx:id="forenameField" layoutX="216.0" layoutY="353.0" onKeyPressed="#keyPressed" prefHeight="48.0" prefWidth="318.0" promptText="first name" style="-fx-border-style: solid; -fx-border-width: 3; -fx-border-radius: 10; -fx-background-color: transparent; -fx-border-color: white; -fx-text-fill: white;">
-               <font>
-                  <Font name="Arial" size="16.0" />
-               </font>
-            </TextField>
-            <TextField fx:id="usernameField" layoutX="216.0" layoutY="415.0" onKeyPressed="#keyPressed" prefHeight="48.0" prefWidth="318.0" promptText="username" style="-fx-border-style: solid; -fx-border-width: 3; -fx-border-radius: 10; -fx-background-color: transparent; -fx-border-color: white; -fx-text-fill: white;">
-               <font>
-                  <Font name="Arial" size="16.0" />
-               </font>
-            </TextField>
-            <PasswordField fx:id="passwordField" layoutX="216.0" layoutY="475.0" onKeyPressed="#keyPressed" prefHeight="48.0" prefWidth="318.0" promptText="password" style="-fx-border-style: solid; -fx-border-width: 3; -fx-border-radius: 10; -fx-background-color: transparent; -fx-border-color: white; -fx-text-fill: white;">
-               <font>
-                  <Font name="Arial" size="16.0" />
-               </font>
-            </PasswordField>
-            <PasswordField fx:id="repeatPasswordField" layoutX="217.0" layoutY="536.0" onKeyPressed="#keyPressed" prefHeight="48.0" prefWidth="318.0" promptText="repeat password" style="-fx-border-style: solid; -fx-border-width: 3; -fx-border-radius: 10; -fx-background-color: transparent; -fx-border-color: white; -fx-text-fill: white;">
-               <font>
-                  <Font name="Arial" size="16.0" />
-               </font>
-            </PasswordField>
-            <Button fx:id="registerButton" layoutX="319.0" layoutY="608.0" mnemonicParsing="false" onAction="#registerClicked" onKeyPressed="#keyPressed" onMouseEntered="#buttonHovered" onMouseExited="#buttonExited" prefHeight="48.0" prefWidth="113.0" style="-fx-background-color: white; -fx-background-radius: 10;" text="Register" textAlignment="CENTER">
-               <font>
-                  <Font name="Arial Rounded MT Bold" size="16.0" />
-               </font>
-            </Button>
-            <Label fx:id="errorMessage" alignment="TOP_LEFT" layoutX="217.0" layoutY="673.0" prefHeight="161.0" prefWidth="318.0" style="-fx-wrap-text: true;" textFill="WHITE">
-               <font>
-                  <Font name="Arial Rounded MT Bold" size="16.0" />
-               </font>
-            </Label>
-         </children></Pane>
-   </children>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+            onMouseDragged="#mouseDragged" onMousePressed="#mousePressed" prefHeight="900.0" prefWidth="1400.0"
+            xmlns="http://javafx.com/javafx/8.0.241" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="controllers.RegisterPageController">
+   <Pane prefHeight="900.0" prefWidth="701.0" style="-fx-background-color: #E6BB9A;">
+      <Label layoutX="127.0" layoutY="263.0" text="Organised.">
+         <font>
+            <Font name="Arial Rounded MT Bold" size="50.0"/>
+         </font>
+      </Label>
+      <Label fx:id="greetingsMessageLabel" alignment="TOP_LEFT" layoutX="127.0" layoutY="474.0" prefHeight="133.0"
+             prefWidth="507.0" style="-fx-wrap-text: True;"
+             text="You are literally out of the comprehension of time.">
+         <font>
+            <Font name="Arial Rounded MT Bold" size="30.0"/>
+         </font>
+      </Label>
+      <Label fx:id="greetingsLabel" layoutX="127.0" layoutY="426.0" text="Hello!">
+         <font>
+            <Font name="Arial Rounded MT Bold" size="40.0"/>
+         </font>
+      </Label>
+   </Pane>
+   <Pane layoutX="700.0" prefHeight="900.0" prefWidth="701.0" style="-fx-background-color: #2B2B2B;">
+      <ImageView fx:id="closeButton" fitHeight="29.0" fitWidth="27.0" layoutX="660.0" layoutY="14.0"
+                 onMouseClicked="#closeClicked" onMouseEntered="#closeHovered" onMouseExited="#closeExited"
+                 pickOnBounds="true" preserveRatio="true">
+         <Image url="@../images/close_icon.png"/>
+      </ImageView>
+      <ImageView fx:id="minimizeButton" fitHeight="27.0" fitWidth="27.0" layoutX="633.0" layoutY="14.0"
+                 onMouseClicked="#minimizeClicked" onMouseEntered="#minimizeHovered" onMouseExited="#minimizeExited"
+                 pickOnBounds="true" preserveRatio="true">
+         <Image url="@../images/minimize_icon.png"/>
+      </ImageView>
+      <ImageView fx:id="goBackButton" fitHeight="27.0" fitWidth="27.0" layoutX="606.0" layoutY="14.0"
+                 onMouseClicked="#goBackClicked" onMouseEntered="#goBackHovered" onMouseExited="#goBackExited"
+                 pickOnBounds="true" preserveRatio="true">
+         <Image url="@../images/back_icon.png"/>
+      </ImageView>
+      <Label layoutX="216.0" layoutY="264.0" text="Register." textFill="WHITE">
+         <font>
+            <Font name="Arial Rounded MT Bold" size="50.0"/>
+         </font>
+      </Label>
+      <TextField fx:id="forenameField" layoutX="216.0" layoutY="353.0" onKeyPressed="#keyPressed" prefHeight="48.0"
+                 prefWidth="318.0" promptText="first name"
+                 style="-fx-border-style: solid; -fx-border-width: 3; -fx-border-radius: 10; -fx-background-color: transparent; -fx-border-color: white; -fx-text-fill: white;">
+         <font>
+            <Font name="Arial" size="16.0"/>
+         </font>
+      </TextField>
+      <TextField fx:id="usernameField" layoutX="216.0" layoutY="415.0" onKeyPressed="#keyPressed" prefHeight="48.0"
+                 prefWidth="318.0" promptText="username"
+                 style="-fx-border-style: solid; -fx-border-width: 3; -fx-border-radius: 10; -fx-background-color: transparent; -fx-border-color: white; -fx-text-fill: white;">
+         <font>
+            <Font name="Arial" size="16.0"/>
+         </font>
+      </TextField>
+      <PasswordField fx:id="passwordField" layoutX="216.0" layoutY="475.0" onKeyPressed="#keyPressed"
+                     prefHeight="48.0" prefWidth="318.0" promptText="password"
+                     style="-fx-border-style: solid; -fx-border-width: 3; -fx-border-radius: 10; -fx-background-color: transparent; -fx-border-color: white; -fx-text-fill: white;">
+         <font>
+            <Font name="Arial" size="16.0"/>
+         </font>
+      </PasswordField>
+      <PasswordField fx:id="repeatPasswordField" layoutX="217.0" layoutY="536.0" onKeyPressed="#keyPressed"
+                     prefHeight="48.0" prefWidth="318.0" promptText="repeat password"
+                     style="-fx-border-style: solid; -fx-border-width: 3; -fx-border-radius: 10; -fx-background-color: transparent; -fx-border-color: white; -fx-text-fill: white;">
+         <font>
+            <Font name="Arial" size="16.0"/>
+         </font>
+      </PasswordField>
+      <Button fx:id="registerButton" layoutX="319.0" layoutY="608.0" mnemonicParsing="false"
+              onAction="#registerClicked" onKeyPressed="#keyPressed" onMouseEntered="#buttonHovered"
+              onMouseExited="#buttonExited" prefHeight="48.0" prefWidth="113.0"
+              style="-fx-background-color: white; -fx-background-radius: 10;" text="Register" textAlignment="CENTER">
+         <font>
+            <Font name="Arial Rounded MT Bold" size="16.0"/>
+         </font>
+      </Button>
+      <Label fx:id="errorMessage" alignment="TOP_LEFT" layoutX="217.0" layoutY="673.0" prefHeight="161.0"
+             prefWidth="318.0" style="-fx-wrap-text: true;" textFill="WHITE">
+         <font>
+            <Font name="Arial Rounded MT Bold" size="16.0"/>
+         </font>
+      </Label>
+   </Pane>
 </AnchorPane>
