--- a/src/views/SchedulePopupViewRecurringEvent.fxml
+++ b/src/views/SchedulePopupViewRecurringEvent.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#keyPressed" onMouseDragged="#mouseDraggedPopup" onMousePressed="#mousePressed" prefHeight="800.0" prefWidth="700.0" style="-fx-background-color: #E6BB9A;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.SchedulePopupRecurringEventController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#keyPressed" onMouseDragged="#mouseDraggedPopup" onMousePressed="#mousePressed" prefHeight="800.0" prefWidth="700.0" style="-fx-background-color: #E6BB9A;" xmlns="http://javafx.com/javafx/8.0.241" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.SchedulePopupRecurringEventController">
    <Pane layoutX="4.0" layoutY="4.0" prefHeight="793.0" prefWidth="693.0" style="-fx-background-color: #2B2B2B;">
       <ImageView fx:id="closeButton" fitHeight="29.0" fitWidth="27.0" layoutX="659.0" layoutY="7.0" onMouseClicked="#closeClicked" onMouseEntered="#closeHovered" onMouseExited="#closeExited" pickOnBounds="true">
          <Image url="@../images/close_icon.png" />
@@ -61,53 +61,59 @@
          <ComboBox fx:id="startTimeComboBox" layoutX="300.0" layoutY="6.0" prefHeight="45.0" prefWidth="224.0" promptText="Select Start Time:" style="-fx-background-color: none; -fx-border-style: solid; -fx-border-color: white; -fx-border-radius: 10; -fx-border-width: 3;" styleClass="combo-box-base" />
       </Pane>
       <Pane layoutX="78.0" layoutY="336.0" prefHeight="57.0" prefWidth="538.0">
-         <children>
-            <Label layoutY="-6.0" prefHeight="69.0" prefWidth="269.0" text="End Time:" textFill="WHITE">
-               <font>
-                  <Font name="Arial Rounded MT Bold" size="25.0" />
-               </font>
-            </Label>
-            <ComboBox fx:id="endTimeComboBox" layoutX="300.0" layoutY="6.0" prefHeight="45.0" prefWidth="224.0" promptText="Select End Time:" style="-fx-background-color: none; -fx-border-style: solid; -fx-border-color: white; -fx-border-radius: 10; -fx-border-width: 3;" styleClass="combo-box-base" />
-         </children>
+         <Label layoutY="-6.0" prefHeight="69.0" prefWidth="269.0" text="End Time:" textFill="WHITE">
+            <font>
+               <Font name="Arial Rounded MT Bold" size="25.0"/>
+            </font>
+         </Label>
+         <ComboBox fx:id="endTimeComboBox" layoutX="300.0" layoutY="6.0" prefHeight="45.0" prefWidth="224.0"
+                   promptText="Select End Time:"
+                   style="-fx-background-color: none; -fx-border-style: solid; -fx-border-color: white; -fx-border-radius: 10; -fx-border-width: 3;"
+                   styleClass="combo-box-base"/>
       </Pane>
       <Pane layoutX="78.0" layoutY="393.0" prefHeight="57.0" prefWidth="538.0">
-         <children>
-            <Label layoutY="-6.0" prefHeight="69.0" prefWidth="269.0" text="Start Week:" textFill="WHITE">
-               <font>
-                  <Font name="Arial Rounded MT Bold" size="25.0" />
-               </font>
-            </Label>
-            <ComboBox fx:id="startWeekComboBox" layoutX="300.0" layoutY="6.0" prefHeight="45.0" prefWidth="224.0" promptText="Select Start Week:" style="-fx-background-color: none; -fx-border-style: solid; -fx-border-color: white; -fx-border-radius: 10; -fx-border-width: 3;" styleClass="combo-box-base" />
-         </children>
+         <Label layoutY="-6.0" prefHeight="69.0" prefWidth="269.0" text="Start Week:" textFill="WHITE">
+            <font>
+               <Font name="Arial Rounded MT Bold" size="25.0"/>
+            </font>
+         </Label>
+         <ComboBox fx:id="startWeekComboBox" layoutX="300.0" layoutY="6.0" prefHeight="45.0" prefWidth="224.0"
+                   promptText="Select Start Week:"
+                   style="-fx-background-color: none; -fx-border-style: solid; -fx-border-color: white; -fx-border-radius: 10; -fx-border-width: 3;"
+                   styleClass="combo-box-base"/>
       </Pane>
       <Pane layoutX="79.0" layoutY="450.0" prefHeight="57.0" prefWidth="538.0">
-         <children>
-            <Label layoutY="-6.0" prefHeight="69.0" prefWidth="269.0" text="End Week:" textFill="WHITE">
-               <font>
-                  <Font name="Arial Rounded MT Bold" size="25.0" />
-               </font>
-            </Label>
-            <ComboBox fx:id="endWeekComboBox" layoutX="300.0" layoutY="6.0" prefHeight="45.0" prefWidth="224.0" promptText="Select End Week:" style="-fx-background-color: none; -fx-border-style: solid; -fx-border-color: white; -fx-border-radius: 10; -fx-border-width: 3;" styleClass="combo-box-base" />
-         </children>
+         <Label layoutY="-6.0" prefHeight="69.0" prefWidth="269.0" text="End Week:" textFill="WHITE">
+            <font>
+               <Font name="Arial Rounded MT Bold" size="25.0"/>
+            </font>
+         </Label>
+         <ComboBox fx:id="endWeekComboBox" layoutX="300.0" layoutY="6.0" prefHeight="45.0" prefWidth="224.0"
+                   promptText="Select End Week:"
+                   style="-fx-background-color: none; -fx-border-style: solid; -fx-border-color: white; -fx-border-radius: 10; -fx-border-width: 3;"
+                   styleClass="combo-box-base"/>
       </Pane>
       <Pane layoutX="79.0" layoutY="510.0" prefHeight="175.0" prefWidth="538.0">
-         <children>
-            <Label layoutY="-6.0" prefHeight="69.0" prefWidth="269.0" text="Description:" textFill="WHITE">
-               <font>
-                  <Font name="Arial Rounded MT Bold" size="25.0" />
-               </font>
-            </Label>
-            <TextArea fx:id="descriptionField" layoutX="300.0" layoutY="4.0" prefHeight="167.0" prefWidth="224.0" promptText="e.g. Synchronous Organisation Session " style="-fx-border-style: solid; -fx-border-width: 3; -fx-border-radius: 10; -fx-background-color: transparent; -fx-border-color: white; -fx-text-fill: white; -fx-wrap-text: true;" stylesheets="@../stylesheets/textAreaStyling.css">
-               <font>
-                  <Font name="Arial" size="16.0" />
-               </font>
-            </TextArea>
-            <Label layoutY="52.0" prefHeight="119.0" prefWidth="289.0" style="-fx-wrap-text: true;" text="Special symbols, which insert     Week numbers:                                         • = current Week number.                      • &lt; previous Week number.                    • &gt; following Week number." textFill="#e6bb9a">
-               <font>
-                  <Font name="Arial Rounded MT Bold" size="16.0" />
-               </font>
-            </Label>
-         </children>
+         <Label layoutY="-6.0" prefHeight="69.0" prefWidth="269.0" text="Description:" textFill="WHITE">
+            <font>
+               <Font name="Arial Rounded MT Bold" size="25.0"/>
+            </font>
+         </Label>
+         <TextArea fx:id="descriptionField" layoutX="300.0" layoutY="4.0" prefHeight="167.0" prefWidth="224.0"
+                   promptText="e.g. Synchronous Organisation Session "
+                   style="-fx-border-style: solid; -fx-border-width: 3; -fx-border-radius: 10; -fx-background-color: transparent; -fx-border-color: white; -fx-text-fill: white; -fx-wrap-text: true;"
+                   stylesheets="@../stylesheets/textAreaStyling.css">
+            <font>
+               <Font name="Arial" size="16.0"/>
+            </font>
+         </TextArea>
+         <Label layoutY="52.0" prefHeight="119.0" prefWidth="289.0" style="-fx-wrap-text: true;"
+                text="Special symbols, which insert     Week numbers:                                         • = current Week number.                      • &lt; previous Week number.                    • &gt; following Week number."
+                textFill="#e6bb9a">
+            <font>
+               <Font name="Arial Rounded MT Bold" size="16.0"/>
+            </font>
+         </Label>
       </Pane>
       <Pane fx:id="actionButton" layoutX="260.0" layoutY="714.0" onMouseClicked="#actionButtonClicked" onMouseEntered="#actionButtonHovered" onMouseExited="#actionButtonExited" prefHeight="63.0" prefWidth="161.0" style="-fx-border-style: solid; -fx-border-color: white; -fx-border-width: 3; -fx-border-radius: 20;">
          <ImageView fx:id="actionButtonImage" fitHeight="35.0" fitWidth="35.0" layoutX="19.0" layoutY="14.0">
